Update and rename this.md to 1. this.md

--- a/1. this.md
+++ b/1. this.md
@@ -9,6 +9,13 @@ this是函数内部的特殊对象，引用的是函数执行的环境对象
 		console.log(this === window);
 	})();
 	
+	function method(){
+		(function(){
+			console.log(this);
+			console.log(this === window);
+		})();	
+	}
+	method();
 	```
 
 2. 作为方法调用：this==方法所属对象
@@ -49,5 +56,6 @@ this是函数内部的特殊对象，引用的是函数执行的环境对象
 	var obj = {};
 	method.call(obj);
 	method.apply(obj);
+	
 	```
 
