--- a/1. this.md
+++ b/1. this.md
@@ -33,16 +33,18 @@ this是函数内部的特殊对象，引用的是函数执行的环境对象
 3. 作为构造函数调用：this==新对象
 
 	```js
+	var x = 2;
 	function Obj(){
 		this.x = 0;
 	}
+	
 	Obj.prototype.method = function(){
 		console.log(this);
 		console.log(this === obj);
 	}
 	
 	var obj = new Obj();
-	obj.method();
+	console.log(obj.x, x);
 	
 	```
 
