--- a/1. this.md
+++ b/1. this.md
@@ -21,12 +21,76 @@ this是函数内部的特殊对象，引用的是函数执行的环境对象
 2. 作为方法调用：this==方法所属对象
 
 	```js
-	var obj = {};
-	obj.method = function(){
+##this含义
+this是函数内部的特殊对象，引用的是函数执行的环境对象
+
+1. 作为函数调用：this==window
+
+	```
+	(function(){
+		console.log(this);
+		console.log(this === window);
+	})();
+	
+	function method(){
+		(function(){
+			console.log(this);
+			console.log(this === window);
+		})();	
+	}
+	method();
+	
+	```
+
+2. 作为方法调用：this==方法所属对象
+
+	```
+	var obj = {	
+		method: function(){
+			console.log(this);
+			console.log(this === obj);
+			
+			(function(){
+				console.log(this);
+				console.log(this === window);
+			})();
+		}
+	}
+	
+	obj.method();
+	
+	```
+
+3. 作为构造函数调用：this==新对象
+
+	```
+	var x = 2;
+	function Obj(){
+		this.x = 0;
+	}
+	
+	Obj.prototype.method = function(){
 		console.log(this);
 		console.log(this === obj);
 	}
-	obj.method();
+	
+	var obj = new Obj();
+	console.log(obj.x, x);
+	
+	```
+
+4. call和apply调用：this==传入的参数对象
+
+	```
+	function method(){
+		console.log(this);
+		console.log(this === obj);
+	}
+	var obj = {};
+	method.call(obj);
+	method.apply(obj);
+	```
+
 	
 	```
 
