--- a/1. this.md
+++ b/1. this.md
@@ -49,10 +49,16 @@ this是函数内部的特殊对象，引用的是函数执行的环境对象
 	Obj.prototype.method = function(){
 		console.log(this);
 		console.log(this === obj);
+		
+		(function(){
+			console.log(this);
+			console.log(this === window);
+		})();
 	}
 	
 	var obj = new Obj();
 	console.log(obj.x, x);
+	obj.method();
 	
 	```
 
