--- a/3. JS原型链.md
+++ b/3. JS原型链.md
@@ -30,4 +30,10 @@ Function == Function.prototype.constructor
 Object.__proto__ == Function.prototype
 Object.prototype == Function.prototype.__proto__
 Object.prototype.__proto__ == null
+
+({}).__proto__ == Object.prototype
+
+Object.getPrototypeOf(object)
+false.__proto__ == Boolean.prototype
+'string'.__proto__ == String.prototype
 ```
